# hikari

./: Cargo.toml  README.md
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs  main.rs
crates/proto/: Cargo.toml
