[workspace]
resolver = "2"
members = [ "crates/proto","crates/p2p"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
celestia-tendermint = { version = "0.32.1", default-features = false }
celestia-tendermint-proto = "0.32.1"
tracing = "0.1.40"
