[package]
name = "hikari-p2p"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "hikari"

[dependencies]
libp2p = {version = "0.53.2", features = [
  "autonat",
  "ping",
  "gossipsub",
  "identify",
  "macros",
  "request-response",
  "kad",
  "noise",
  "dns",
  "tcp",
  "tokio",
  "yamux",
  "quic",
]}
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter" ] }
tokio = { version = "1.35.1", features = ["full"] }
